# SeanEngineCore

./: CMakeLists.txt  README.md  main.cu
debug_tools/: GradientCheck.cu  GradientCheck.cuh
engine/: Engine.cu  Engine.cuh
execution/: ThreadControls.cpp  ThreadControls.h
io/: Reader.cu  Reader.cuh
layers/: ConvLayer.cu  ConvLayer.cuh  DenseLayer.cu  DenseLayer.cuh  ImageContainer.cu  ImageContainer.cuh  Layer.cu  Layer.cuh  MaxPoolingLayer.cu  MaxPoolingLayer.cuh  SoftmaxLayer.cu  SoftmaxLayer.cuh
models/: CSPDarknet53.cu  CSPDarknet53.cuh  DenseMLP.cpp  DenseMLP.cu  DenseMLP.cuh  DenseMLP.h  Model.cu  Model.cuh  TestModel.cu  TestModel.cuh  VGG16.cu  VGG16.cuh
utils/: Matrix.cu  Matrix.cuh  NeuralUtils.cu  NeuralUtils.cuh  logger.cu  logger.cuh
